minor aligning fix

--- a/index.css
+++ b/index.css
@@ -272,7 +272,8 @@ section .title::after{
     padding: 20px;
     display: grid;
     grid-template-columns: repeat(5,1fr);
-    gap: 30px;
+    gap: 20px;
+    /* justify-content: center; */
     /* margin: auto; */
 }
 
